changed the title

--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -12,7 +12,7 @@
   <meta name="viewport" content="width=device-width" />
 
   <!-- <title>Welcome to Foundation | Homepage</title> -->
-  <title>R20130215Foundation</title>
+  <title>Tubez</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
