added views and made nav and footer partials

--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -33,19 +33,7 @@
 
   <!-- Header and Nav -->
 
-  <div class="row">
-    <div class="three columns">
-      <h1><img src="http://placehold.it/400x100&text=Logo" /></h1>
-    </div>
-    <div class="nine columns">
-      <ul class="nav-bar right">
-        <li><a href="#">Link 1</a></li>
-        <li><a href="#">Link 2</a></li>
-        <li><a href="#">Link 3</a></li>
-        <li><a href="#">Link 4</a></li>
-      </ul>
-    </div>
-  </div>
+  <%= render :partial => 'layouts/nav' %>
 
   <!-- End Header and Nav -->
 
@@ -116,24 +104,7 @@
 
   <!-- Footer -->
 
-  <footer class="row">
-    <div class="twelve columns">
-      <hr />
-      <div class="row">
-        <div class="six columns">
-          <p>&copy; Copyright no one at all. Go to town.</p>
-        </div>
-        <div class="six columns">
-          <ul class="link-list right">
-            <li><a href="#">Link 1</a></li>
-            <li><a href="#">Link 2</a></li>
-            <li><a href="#">Link 3</a></li>
-            <li><a href="#">Link 4</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </footer>
+  <%= render :partial => 'layouts/footer' %>
 
   <!-- Included JS Files (Uncompressed) -->
   <!--
