youtube sreach function added

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,10 +7,8 @@
       </div>
       <div class="six columns">
         <ul class="link-list right">
-          <li><a href="#">Link 1</a></li>
-          <li><a href="#">Link 2</a></li>
-          <li><a href="#">Link 3</a></li>
-          <li><a href="#">Link 4</a></li>
+          <li><%= link_to('Home', root_path ) %></li>
+          <li><%= link_to('Search', videos_new_path ) %></li>
         </ul>
       </div>
     </div>
