--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -4,10 +4,8 @@
   </div>
   <div class="nine columns">
     <ul class="nav-bar right">
-      <li><a href="#">Link 1</a></li>
-      <li><a href="#">Link 2</a></li>
-      <li><a href="#">Link 3</a></li>
-      <li><a href="#">Link 4</a></li>
+      <li><%= link_to('Home', root_path ) %></li>
+      <li><%= link_to('Search', videos_new_path ) %></li>
     </ul>
   </div>
 </div>
