--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,9 +33,11 @@
 
   <%= render :partial => 'layouts/nav' %>
 
-
-  <%= yield %>
-
+  <div class='row'>
+    <div class="twelve columns">
+      <%= yield %>
+    </div>
+  </div>
 
   <%= render :partial => 'layouts/footer' %>
 
