removed the list style

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,4 +1,5 @@
 /*
  *= require 'foundation/stylesheets/foundation.min.css'
  *= require 'foundation/stylesheets/app.css'
+ *= require 'style.css'
  */
